CYTOSCAPE-12964 Add 'high detail' option to image export.